# snowdeer-youtube-downloader

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build_docker.sh  docker-compose.yaml
.claude/: settings.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .dockerignore  .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: download.py  video.py
backend/app/core/: ytdlp_wrapper.py
backend/app/models/: download.py  video.py
backend/app/services/: download_service.py  video_service.py
backend/docker/: Dockerfile
backend/tests/: conftest.py
backend/tests/integration/: test_download_api.py  test_video_api.py
backend/tests/unit/: test_download_service.py  test_video_service.py  test_ytdlp_wrapper.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/docker/: Dockerfile  nginx.conf
frontend/src/: App.vue
frontend/src/components/: DownloadResult.vue  FormatSelector.vue  ProgressBar.vue  UrlInput.vue  VideoPreview.vue
frontend/src/services/: api.ts
frontend/src/stores/: downloadStore.ts
frontend/src/types/: index.ts
frontend/tests/components/: DownloadResult.spec.ts  ProgressBar.spec.ts  (+2 more)
specs/001-video-download/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-browser-file-download/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+5 files in other folders)
